--- a/style.css
+++ b/style.css
@@ -6,12 +6,55 @@
 
 nav {
     display: flex;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     justify-content: space-between;
 
 }
 
 header {
    margin: 0 120px;
+   padding-top: 16px;
+   font-size: 16px;
+   font-weight: 500;
    
+   
+}
+
+header nav ul li  {
+       list-style: none;
+
+     
+
+}
+
+header nav ul li a {
+    text-decoration: none;
+    color: black;
+
+}
+
+.menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 34px;
+}
+
+
+.font-open-sans{
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+ 
+}
+
+.btn {
+      padding: 12.5px 16px;
+      border-radius: 4px;
+      border: none;
+      background-color: #469165;
+      color: #FFFFFF;
+      font-size: 16px;
+      font-weight: 550;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+       margin-top: 10px;
 }
