--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ gap: 10px;
 
 }
 
-#btn1 {
+.btn1 {
     padding: 12px 16px;
         background-color: #469165;
     color: #FFFFFF;
@@ -168,7 +168,7 @@ gap: 10px;
        
 }
 
-#btn1 img {
+.btn1 img {
    
      align-content: center;
 }
@@ -184,7 +184,7 @@ gap: 10px;
     padding: 15px;
 }
 
-#btn1:hover {
+.btn1:hover {
       background-color: grey;
     color: white;
     border: 1px solid black;
@@ -336,4 +336,67 @@ header nav ul li a:hover{
     display: flex;
     gap: 6px;
 }
+
+.second-banner {
+       
+    background-color: #F7F6F2;
+    height: 384px;
+     width: 1360px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     margin-left: 120px;
+     margin-right: 120px;
+     border-radius: 12px;
+}
+
+.banner-content {
+    text-align: center;
+    max-width: 700px;
+}
+
+.banner-content h1 {
+      font-size: 42px;
+      margin-bottom: 16px;
+}
+
+.banner-content p {
+    color: #627382;
+    margin-bottom: 20px;
+
+}
+
+.banner-content small {
+    color: #627382;
+    
+} 
+
+.footer-part {
+    background-color: #001931;
+    height: 348px;
+    width: 1600px;
+    margin-top: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+  
+    
+
+}
+
+.footer-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ 
+    width: 1360px;
+    height: 64px;
+   
+    gap: 1140px;
+    cursor: pointer;
+   
+}
+
+
 
